deploy: 6cea490112ba0594eac410c0871df0ebfef12c70

--- a/genindex.html
+++ b/genindex.html
@@ -353,6 +353,10 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/modules.html#src.gmm.GaussianMixture.fit">fit() (src.gmm.GaussianMixture method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/modules.html#src.metrics.ClusteringMetrics.fowlkes_mallows_score">fowlkes_mallows_score() (src.metrics.ClusteringMetrics static method)</a>
 </li>
   </ul></td>
@@ -360,6 +364,10 @@
 
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/modules.html#src.gmm.GaussianMixture">GaussianMixture (class in src.gmm)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/modules.html#src.gmm_init.GMMInitializer">GMMInitializer (class in src.gmm_init)</a>
 </li>
@@ -442,6 +450,10 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/modules.html#src.gmm.GaussianMixture.predict">predict() (src.gmm.GaussianMixture method)</a>
+</li>
+      <li><a href="source/modules.html#src.gmm.GaussianMixture.predict_proba">predict_proba() (src.gmm.GaussianMixture method)</a>
+</li>
       <li><a href="source/modules.html#src.metrics.ClusteringMetrics.purity_score">purity_score() (src.metrics.ClusteringMetrics static method)</a>
 </li>
   </ul></td>
@@ -468,6 +480,12 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/modules.html#src.gmm.GaussianMixture.sample">sample() (src.gmm.GaussianMixture method)</a>
+</li>
+      <li><a href="source/modules.html#src.gmm.GaussianMixture.score">score() (src.gmm.GaussianMixture method)</a>
+</li>
+      <li><a href="source/modules.html#src.gmm.GaussianMixture.score_samples">score_samples() (src.gmm.GaussianMixture method)</a>
+</li>
       <li><a href="source/modules.html#src.metrics.ClusteringMetrics.silhouette_score">silhouette_score() (src.metrics.ClusteringMetrics static method)</a>
 </li>
       <li>
