--- a/_modules/index.html
+++ b/_modules/index.html
@@ -294,7 +294,8 @@
                 <article class="bd-article">
                   
   <h1>All modules for which code is available</h1>
-<ul><li><a href="src/gmm_init.html">src.gmm_init</a></li>
+<ul><li><a href="src/gmm.html">src.gmm</a></li>
+<li><a href="src/gmm_init.html">src.gmm_init</a></li>
 <li><a href="src/metrics.html">src.metrics</a></li>
 </ul>
 
