--- a/_modules/index.html
+++ b/_modules/index.html
@@ -30,6 +30,7 @@
 <link href="../_static/styles/pydata-sphinx-theme.css?digest=8878045cc6db502f8baf" rel="stylesheet" />
 
     <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=8f2a1f02" />
+    <link rel="stylesheet" type="text/css" href="../_static/custom.css?v=5c7ff671" />
   
   <!-- So that users can add custom icons -->
   <script src="../_static/scripts/fontawesome.js?digest=8878045cc6db502f8baf"></script>
@@ -269,6 +270,8 @@
                   
   <h1>All modules for which code is available</h1>
 <ul><li><a href="src/gmm.html">src.gmm</a></li>
+<li><a href="src/gmm_init.html">src.gmm_init</a></li>
+<li><a href="src/metrics.html">src.metrics</a></li>
 </ul>
 
                 </article>
