--- a/source/gaussian_mixture.html
+++ b/source/gaussian_mixture.html
@@ -31,6 +31,7 @@
 <link href="../_static/styles/pydata-sphinx-theme.css?digest=8878045cc6db502f8baf" rel="stylesheet" />
 
     <link rel="stylesheet" type="text/css" href="../_static/pygments.css?v=8f2a1f02" />
+    <link rel="stylesheet" type="text/css" href="../_static/custom.css?v=5c7ff671" />
   
   <!-- So that users can add custom icons -->
   <script src="../_static/scripts/fontawesome.js?digest=8878045cc6db502f8baf"></script>
@@ -291,7 +292,7 @@
 <li><p>The Expectation-Maximization (EM) algorithm.</p></li>
 <li><p>Multiple initializations (n_init).</p></li>
 <li><p>Configurable covariance types (full, diag, spherical, tied_full, tied_diag, tied_spherical).</p></li>
-<li><p>Maximum Likelihood Estimation (MLE) and optional MAP estimation via priors.</p></li>
+<li><p>Maximum Likelihood Estimation (MLE) and Maximum a Posteriori (MAP) estimation (i.e. with Priors).</p></li>
 </ul>
 <dl class="field-list simple">
 <dt class="field-odd">Parameters<span class="colon">:</span></dt>
