--- a/genindex.html
+++ b/genindex.html
@@ -362,32 +362,20 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/clustering_metrics.html#src.metrics.ClusteringMetrics.kl_divergence_gmm">kl_divergence_gmm() (src.metrics.ClusteringMetrics static method)</a>
 </li>
-      <li><a href="source/gmm_initializer.html#src.gmm_init.GMMInitializer.kmeans">kmeans() (src.gmm_init.GMMInitializer method)</a>
-
-      <ul>
-        <li><a href="source/gmm_initializer.html#id0">(src.gmm_init.GMMInitializer static method)</a>
-</li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/gmm_initializer.html#src.gmm_init.GMMInitializer.kpp">kpp() (src.gmm_init.GMMInitializer method)</a>
-
-      <ul>
-        <li><a href="source/gmm_initializer.html#id1">(src.gmm_init.GMMInitializer static method)</a>
+      <li><a href="source/gmm_initializer.html#src.gmm_init.GMMInitializer.kmeans">kmeans() (src.gmm_init.GMMInitializer static method)</a>
 </li>
-      </ul></li>
+      <li><a href="source/gmm_initializer.html#src.gmm_init.GMMInitializer.kpp">kpp() (src.gmm_init.GMMInitializer static method)</a>
+</li>
   </ul></td>
 </tr></table>
 
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/gmm_initializer.html#src.gmm_init.GMMInitializer.maxdist">maxdist() (src.gmm_init.GMMInitializer method)</a>
-
-      <ul>
-        <li><a href="source/gmm_initializer.html#id2">(src.gmm_init.GMMInitializer static method)</a>
+      <li><a href="source/gmm_initializer.html#src.gmm_init.GMMInitializer.maxdist">maxdist() (src.gmm_init.GMMInitializer static method)</a>
 </li>
-      </ul></li>
       <li>
     module
 
@@ -417,16 +405,12 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="source/gmm_initializer.html#src.gmm_init.GMMInitializer.points">points() (src.gmm_init.GMMInitializer method)</a>
-
-      <ul>
-        <li><a href="source/gmm_initializer.html#id3">(src.gmm_init.GMMInitializer static method)</a>
+      <li><a href="source/gmm_initializer.html#src.gmm_init.GMMInitializer.points">points() (src.gmm_init.GMMInitializer static method)</a>
 </li>
-      </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/gaussian_mixture.html#src.gmm.GaussianMixture.predict">predict() (src.gmm.GaussianMixture method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/gaussian_mixture.html#src.gmm.GaussianMixture.predict_proba">predict_proba() (src.gmm.GaussianMixture method)</a>
 </li>
       <li><a href="source/clustering_metrics.html#src.metrics.ClusteringMetrics.purity_score">purity_score() (src.metrics.ClusteringMetrics static method)</a>
@@ -439,14 +423,10 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="source/clustering_metrics.html#src.metrics.ClusteringMetrics.rand_score">rand_score() (src.metrics.ClusteringMetrics static method)</a>
 </li>
-      <li><a href="source/gmm_initializer.html#src.gmm_init.GMMInitializer.random">random() (src.gmm_init.GMMInitializer method)</a>
-
-      <ul>
-        <li><a href="source/gmm_initializer.html#id4">(src.gmm_init.GMMInitializer static method)</a>
-</li>
-      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gmm_initializer.html#src.gmm_init.GMMInitializer.random">random() (src.gmm_init.GMMInitializer static method)</a>
+</li>
       <li><a href="source/clustering_metrics.html#src.metrics.ClusteringMetrics.roc_auc_score">roc_auc_score() (src.metrics.ClusteringMetrics static method)</a>
 </li>
   </ul></td>
