--- a/genindex.html
+++ b/genindex.html
@@ -70,8 +70,244 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
+ | <a href="#K"><strong>K</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
+ | <a href="#V"><strong>V</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.adjusted_mutual_info_score">adjusted_mutual_info_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.adjusted_rand_score">adjusted_rand_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.aic_score">aic_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.bic_score">bic_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.calinski_harabasz_score">calinski_harabasz_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.classification_report">classification_report() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics">ClusteringMetrics (class in tgmm.metrics)</a>
+</li>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.completeness_score">completeness_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.confusion_matrix">confusion_matrix() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.davies_bouldin_index">davies_bouldin_index() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.dunn_index">dunn_index() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.evaluate_clustering">evaluate_clustering() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.fit">fit() (tgmm.gmm.GaussianMixture method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.fowlkes_mallows_score">fowlkes_mallows_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture">GaussianMixture (class in tgmm.gmm)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gmm_initializer.html#tgmm.gmm_init.GMMInitializer">GMMInitializer (class in tgmm.gmm_init)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.homogeneity_score">homogeneity_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="K">K</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.kl_divergence_gmm">kl_divergence_gmm() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gmm_initializer.html#tgmm.gmm_init.GMMInitializer.kmeans">kmeans() (tgmm.gmm_init.GMMInitializer static method)</a>
+</li>
+      <li><a href="source/gmm_initializer.html#tgmm.gmm_init.GMMInitializer.kpp">kpp() (tgmm.gmm_init.GMMInitializer static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gmm_initializer.html#tgmm.gmm_init.GMMInitializer.maxdist">maxdist() (tgmm.gmm_init.GMMInitializer static method)</a>
+</li>
+      <li>
+    module
+
+      <ul>
+        <li><a href="source/gaussian_mixture.html#module-tgmm.gmm">tgmm.gmm</a>
+</li>
+        <li><a href="source/gmm_initializer.html#module-tgmm.gmm_init">tgmm.gmm_init</a>
+</li>
+        <li><a href="source/clustering_metrics.html#module-tgmm.metrics">tgmm.metrics</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.mutual_info_score">mutual_info_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.normalized_mutual_info_score">normalized_mutual_info_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gmm_initializer.html#tgmm.gmm_init.GMMInitializer.points">points() (tgmm.gmm_init.GMMInitializer static method)</a>
+</li>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.predict">predict() (tgmm.gmm.GaussianMixture method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.predict_proba">predict_proba() (tgmm.gmm.GaussianMixture method)</a>
+</li>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.purity_score">purity_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.rand_score">rand_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gmm_initializer.html#tgmm.gmm_init.GMMInitializer.random">random() (tgmm.gmm_init.GMMInitializer static method)</a>
+</li>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.roc_auc_score">roc_auc_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.sample">sample() (tgmm.gmm.GaussianMixture method)</a>
+</li>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.score">score() (tgmm.gmm.GaussianMixture method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/gaussian_mixture.html#tgmm.gmm.GaussianMixture.score_samples">score_samples() (tgmm.gmm.GaussianMixture method)</a>
+</li>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.silhouette_score">silhouette_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    tgmm.gmm
+
+      <ul>
+        <li><a href="source/gaussian_mixture.html#module-tgmm.gmm">module</a>
+</li>
+      </ul></li>
+      <li>
+    tgmm.gmm_init
+
+      <ul>
+        <li><a href="source/gmm_initializer.html#module-tgmm.gmm_init">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    tgmm.metrics
+
+      <ul>
+        <li><a href="source/clustering_metrics.html#module-tgmm.metrics">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="source/clustering_metrics.html#tgmm.metrics.ClusteringMetrics.v_measure_score">v_measure_score() (tgmm.metrics.ClusteringMetrics static method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
            </div>
